#135 - Create logic to add view counts on entities